--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: IDK
+title: Darlene Zouras
 subtitle:
-description:
-keywords:
+description: Darlene Zouras is a web developer and artist
+keywords: web developer, front end developer, darlene zouras, dar zouras, illustration
 author: Darlene Zouras
-language: English
+language: en
 timezone: 
 icon: /css/images/dar-avatar1.jpg
 
@@ -79,4 +79,7 @@ theme: darzouras
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/darzouras/darzouras.github.io
+  branch:
+  message:
